# pybdm-insee

./: LICENSE  README.md  pyproject.toml
data/: 202211_liste_variables_modalites.csv  ex.xml  insee_access.json  insee_mods.cjson  naf2008-listes-completes-5-niveaux.csv
pybdm_insee/: __init__ .py  __main__.py  main.py  py-insee.code-workspace
pybdm_insee/installs/: __init__ .py  poetry_install.py
pybdm_insee/tools/: __init__.py  dataframes.py  find.py  insee.py  processing.py
tests/: test_df.py  test_exists.py  test_filter_mods.py  test_find_closest.py  test_gzip.py  test_helper.py  test_query.py  test_spacy_nlp.py
