[tool.poetry]
name = "pybdm-insee"
version = "0.1.0"
description = ""
authors = ["Arno's Stuff <bcda0276@gmail.com>"]
readme = "README.md"
packages = [{include = "pybdm_insee"}]
include = [
    {path = "data"}
]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.1"
requests = "^2.28.1"
lxml = "^4.9.1"
click = "^8.1.3"
colorama = "^0.4.6"

[tool.poetry.scripts]
insee = "pybdm_insee.main:cli"


[[tool.poetry.source]]
name = "py"
url = "https://pypi.org/project/pybdm-insee"
default = false
secondary = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
