[tool.poetry]
name = "pybdm-insee"
version = "0.1.7"
description = ""
authors = ["Arno's Stuff <bcda0276@gmail.com>"]
readme = "README.md"
packages = [{include = "pybdm_insee"}]
include = [
    "./data/202211_correspondance_idbank_dimension.csv.gz",
    "./data/202211_liste_variables_modalites.csv.gz",
    "./data/insee_modalites_2022.csv.gz",
    "./data/naf2008-listes-completes-5-niveaux.csv.gz"
]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.1"
requests = "^2.28.1"
lxml = "^4.9.1"
click = "^8.1.3"
colorama = "^0.4.6"
spacy = {version = "^3.4.3", optional = true}
rich = "^12.6.0"

[tool.poetry.scripts]
insee = "pybdm_insee.main:cli"

[tool.poetry.extras]
caching = ["spacy"]
spacy = ["spacy"]

[[tool.poetry.source]]
name = "py"
url = "https://pypi.org/project/pybdm-insee"
default = false
secondary = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
